--- a/src/example.html
+++ b/src/example.html
@@ -60,7 +60,8 @@
 
 <body>
 
-    <!--canvas is dynamically created and fills body-->
+    <!--canvas is dynamically created and fills body. The ui 
+    panel at the top is also dynamically created-->
 
 <script>
 
